--- a/test.html
+++ b/test.html
@@ -7,6 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="css/main.css" />
+
+        <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
         
     </head>
     <body>
