--- a/skeleton.html
+++ b/skeleton.html
@@ -12,16 +12,23 @@
     <link rel="manifest" href="./manifest.json">
 
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
 
 
 </head>
 
 <body>
 
-<h1 class="header">Build something awesome here</h1>
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Sound Saber</a>
+    </nav>
 
 </body>
 
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
 
 <!--<script type="text/javascript">
