--- a/dashboard.html
+++ b/dashboard.html
@@ -36,37 +36,8 @@
             <i class="fa fa-search"></i>
           </div>
 
-          <ul class="list">
-            
-            <li class="clearfix">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/chat_avatar_01.jpg" alt="avatar" />
-              <div class="about">
-                <div class="name">Vincent Porter</div>
-              </div>
-            </li>
-
-            <li class="clearfix">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/chat_avatar_01.jpg" alt="avatar" />
-              <div class="about">
-                <div class="name">Vincent Porter</div>
-              </div>
-            </li>
-
-            <li class="clearfix">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/chat_avatar_01.jpg" alt="avatar" />
-              <div class="about">
-                <div class="name">Vincent Porter</div>
-              </div>
-            </li>
-
-            <li class="clearfix">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/chat_avatar_01.jpg" alt="avatar" />
-              <div class="about">
-                <div class="name">Vincent Porter</div>
-              </div>
-            </li>
-
-          </ul>
+          <ul class="list" id="recent-list"></ul>
+        
         </div>
 
       </div> <!--container -->
@@ -77,7 +48,8 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
+<script src="js/config.js"></script>
+<script src="js/recent.js"></script>
 
 <!--<script type="text/javascript">
     if('serviceWorker' in navigator) {
