--- a/call.html
+++ b/call.html
@@ -16,11 +16,11 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
-  <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-      <link rel="stylesheet" href="css/stylethread.css">
+    <link rel="stylesheet" href="css/stylethread.css">
 
-
+    <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
 
 </head>
 
