--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
 
+    <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
 
 </head>
 
@@ -23,7 +24,7 @@
         <a class="navbar-brand" href="#">Sound Saber</a>
     </nav>
      <div class=" wrapper "> 
-    <button class=" loginBtn loginBtn--google">
+    <button class=" loginBtn loginBtn--google" onclick="login()">
          Login with Google
     </button>
     </div>
@@ -34,7 +35,8 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
+<script src="js/config.js"></script>
+<script src="js/auth.js"></script>
 
 <!--<script type="text/javascript">
     if('serviceWorker' in navigator) {
