Added https redirect

--- a/call.html
+++ b/call.html
@@ -79,6 +79,12 @@
   <script src="js/config.js"></script>
   <script src="js/chat.js"></script>
 
+  <script>
+      // HTTPS REDIRECT //
+      if (location.protocol !== 'https:' && location.hostname !== 'localhost') 
+          location.replace('https://' + location.href.split('//')[1]);
+  </script>
+
   </html>
     
 
